tests/compiler/classExtendsMultipleBaseClasses/index.ts
class A { }
class B { }
class C extends A, B { }
//~^ ERROR: Syntax Error: Unexpected token ','